--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button id="btnSlash" style="font-size: 20px; padding: 10px;">Slash</button>
         <button id="btnStraight" style="font-size: 20px; padding: 10px;">Straight</button>
         <button id="btnTP" style="font-size: 20px; padding: 10px; background: #0ff; color: #000;">Téléporter</button>
+        <button id="btnDash" style="font-size:20px;padding:10px;">Dash</button>
         
     </div>
 
